@@ -1,21 +1,16 @@
-import java.io.File;
-import java.io.FileNotFoundException;
 import java.util.ArrayList;
-import java.util.LinkedList;
-import java.util.Random;
-import java.util.Scanner;
-import java.util.regex.Pattern;
 
 public class Blackjack {
 	
 	private House dealer;
 	private ArrayList<Player> players;
-	private LinkedList<Card> shoe = new LinkedList<Card>();
+	private Shoe shoe;
+	private int cutCard;
 	
 	public Blackjack(House dealer, ArrayList<Player> players, int numDecks) {
 		this.dealer = dealer;
 		this.players = new ArrayList<Player>(players);
-		setUpShoe(numDecks);
+		this.shoe = new Shoe(numDecks);
 	}
 	
 	/**
@@ -42,14 +37,18 @@ public class Blackjack {
 	 * Deals two cards to each player and the dealer
 	 */
 	public void deal() {
-		dealer.setHidden(shoe.removeFirst());
 		for(int i = 0; i < players.size(); i++) {
 			players.get(i).addHand(new CardHand(shoe.removeFirst()));
 		}
-		dealer.getUpCards().addCard(shoe.remove(0));
+		dealer.setHidden(shoe.removeFirst());
 		for(int i = 0; i < players.size(); i++) {
 			players.get(i).getHand(0).addCard(shoe.removeFirst());
 		}
+		dealer.getUpCards().addCard(shoe.removeFirst());
+	}
+	
+	public int getCutCard() {
+		return(cutCard);
 	}
 	
 	public House getDealer() {
@@ -60,9 +59,9 @@ public class Blackjack {
 		return players;
 	}
 	
-	public LinkedList<Card> getShoe() {
-		return shoe;
-	}
+	//public LinkedList<Card> getShoe() {
+	//	return shoe;
+	//}
 	
 //	/**
 //	 * Gives the player a new card for their hand
@@ -94,8 +93,6 @@ public class Blackjack {
 	 */
 	public void playRound(int minBet) {
 		boolean dealerBlackjack = false;
-		//ArrayList<Player> playersInRound = new ArrayList<Player>();
-		//betting *********put into a method maybe
 		playRouundMakeBets(minBet);
 		deal();
 		if(dealer.getUpCards().contains("Ace")) {
@@ -171,28 +168,8 @@ public class Blackjack {
 		}
 	}
 
-	public ArrayList<Card> readInDeck() throws FileNotFoundException {
-		ArrayList<Card> deck = new ArrayList<Card>();
-		String type = null;
-		String name = null;
-		String value = null;
-		Scanner scanner = new Scanner(new File("StandardDeck.csv"));
-		scanner.useDelimiter(Pattern.compile("[\\r\\n,]+"));
-		while(scanner.hasNext()){
-			if(type == null) {
-				type = scanner.next();
-			} else if(name == null) {
-				name = scanner.next();
-			} else if(value == null) {
-				value = scanner.next();
-				deck.add(new Card(type, name, Integer.parseInt(value)));
-				type = null;
-				name = null;
-				value = null;
-			} 
-		}
-		scanner.close();
-		return deck;
+	public void setCutCard(int cutCard) {
+		this.cutCard = cutCard;
 	}
 	
 	public void setDealer(House dealer) {
@@ -203,23 +180,7 @@ public class Blackjack {
 		this.players = players;
 	}
 	
-	public void setShoe(LinkedList<Card> shoe) {
+	public void setShoe(Shoe shoe) {
 		this.shoe = shoe;
-	}
-	
-	public void setUpShoe(int numDecks) {
-		ArrayList<Card> decks = new ArrayList<Card>();
-		Random rand = new Random();
-		for(int i = 0; i < numDecks; i++) {
-			try{
-				decks.addAll(readInDeck());
-			} catch(FileNotFoundException e) {
-				System.err.println("File not found");
-			}
-		}
-		while(decks.size() != 0) {
-			int index = rand.nextInt(decks.size());
-			shoe.add(decks.remove(index));
-		}
 	}
 }
